@@ -1,3 +1,8 @@
+2001-10-18  Christoph Pfisterer  <cp@chrisp.de>
+
+	* Engine.pm (process): Be more helpful when the user entered an
+	unknown command (contributed by Justin Hallett).
+
 2001-10-17  Christoph Pfisterer  <cp@chrisp.de>
 
 	* Mirror.pm: New class that handles both named and package-local
